# pashto-processing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  final_demo.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_installation.py
code/pashto_dataset/: COMPONENTS_SUMMARY.md  README.md  __init__.py  demo.py  main_pipeline.py  pipeline_config.json  requirements.txt  setup.py  setup.sh
code/pashto_dataset/config/: FILE_SUMMARY.md  README.md  requirements.txt  test_configurations.py
code/pashto_dataset/dataset_manager/: README.md  __init__.py  config.py  dataset_creator.py  dataset_manager.py  examples.py  exporter.py  memory_optimizer.py  metadata_manager.py  quality_metrics.py  requirements.txt  splitter.py  validator.py  versioning.py
code/pashto_dataset/pdf_processor/: README.md  __init__.py  config_utils.py  example_usage.py  metadata_extractor.py  ocr_handler.py  pashto_utils.py  pdf_processor.py  quality_assessor.py  requirements.txt  test_suite.py  validate_module.py
code/pashto_dataset/pipeline/: README.md  __init__.py  config.py  example_usage.py  logging_monitoring.py  main.py  progress_error_recovery.py  requirements.txt  scheduler.py  testing.py  validation.py
code/pashto_dataset/scrapers/: README.md  core.py  (+12 more)
docs/: DOCUMENTATION_SUMMARY.md
docs/api/: README.md
docs/guides/: best_practices.md  configuration.md  installation.md  quick_start.md  usage_tutorials.md
docs/troubleshooting/: common_issues.md  faq.md  performance.md
examples/: basic_usage.py
examples/bash/: cli_examples.sh
examples/config/: basic_config.yaml  batch_processing.yaml  web_scraping.yaml
examples/python/: advanced_example.py  basic_example.py
pashto_pipeline/: __init__.py
pashto_pipeline/core/: __init__.py  pipeline.py
pashto_pipeline/preprocessing/: __init__.py  normalizer.py  stopwords.py  tokenizer.py
pashto_pipeline/utils/: io.py  logger.py
(+19 files in other folders)
